launcher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hebi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
  - hosts:
    - hebi.diamond.ac.uk
  rules:
  - host: hebi.diamond.ac.uk
    http:
      paths:
        - path: /launcher(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: hebi-launcher-service
              port:
                number: 8080
        - path: /()(.*)
          pathType: Prefix
          backend:
            service:
              name: hebi-launcher-service
              port:
                number: 8080
        - path: /()(socket.io.*)
          pathType: Prefix
          backend:
            service:
              name: hebi-launcher-socketio-service
              port:
                number: 8080
